[package]
name = "wharfnet"
version = "0.1.0"
edition = "2024"
description = "One-command localnet for EVM, Solana & Starknet — built-in faucet, pre-deployed test tokens and more"
authors = ["Sainath <Sainath@hashiraworks.com>"]
license = "MIT"
repository = "https://github.com/sainathr19/wharfnet"
homepage = "https://github.com/sainathr19/wharfnet"
readme = "README.md"
keywords = ["localnet", "devnet", "blockchain", "testing", "web3"]
categories = ["development-tools", "command-line-utilities"]

[[bin]]
name = "wharfnet"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
indicatif = "0.17"
console = "0.15"

[dev-dependencies]
tempfile = "3"
