[package]
name = "wharfnet"
version = "0.1.0-alpha.0"
edition = "2024"
description = "One-command localnet for EVM, Solana & Starknet — built-in faucet, pre-deployed test tokens and more"
authors = ["Sainath <Sainath@hashiraworks.com>"]
license = "MIT"
repository = "https://github.com/sainathr19/wharfnet"
homepage = "https://github.com/sainathr19/wharfnet"
readme = "README.md"
keywords = ["localnet", "devnet", "blockchain", "testing", "web3"]
categories = ["development-tools", "command-line-utilities"]

[[bin]]
name = "wharfnet"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
indicatif = "0.17"
console = "0.15"
# Starknet faucet: sign + submit `mint` invokes to the test tokens. 0.17 drops the
# `size-of` transitive dep (fails to compile on arm64-macOS + modern Rust). We pin
# generous resource bounds on the invoke so the RPC-0.9 `estimate_fee` shape is never
# requested from the RPC-0.8.1 devnet. Its HTTP provider is async → small tokio.
starknet = "0.17"
tokio = { version = "1", features = ["rt", "net", "time"] }

[dev-dependencies]
tempfile = "3"
