[package]
name = "wharfnet"
version = "0.1.0-alpha.0"
edition = "2024"
description = "One-command localnet for EVM, Solana & Starknet — a CLI plus a Rust test-utils library, with a built-in faucet and pre-deployed test tokens"
authors = ["Sainath <Sainath@hashiraworks.com>"]
license = "MIT"
repository = "https://github.com/sainathr19/wharfnet"
homepage = "https://github.com/sainathr19/wharfnet"
readme = "README.md"
keywords = ["localnet", "devnet", "blockchain", "testing", "web3"]
categories = ["development-tools", "command-line-utilities"]

[lib]
name = "wharfnet"
path = "src/lib.rs"

[[bin]]
name = "wharfnet"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
indicatif = "0.17"
console = "0.15"
# Starknet faucet: sign + submit `mint` invokes to the test tokens. The
# software-mansion fork of starknet-rs, maintained and targeting JSON-RPC 0.10 —
# matching the pinned devnet image (0.9.x speaks RPC 0.10.2). Pinned resource
# bounds on the invoke skip fee estimation. Its HTTP provider is async → tokio.
starknet-rust = "0.19"
tokio = { version = "1", features = ["rt", "net", "time"] }

[dev-dependencies]
tempfile = "3"
